--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+table, td, th {
+  border: 1px solid #EEEEEE;
+  text-align: center;
+}
+
+table {
+  width: 50%;
+  border-collapse: collapse;
+}
